Bugfix, overflow cutoff in commit-detail-container

--- a/app/frontend/src/app/core/commit-detail/commit-detail.component.scss
+++ b/app/frontend/src/app/core/commit-detail/commit-detail.component.scss
@@ -58,7 +58,6 @@ $badge-size: 20px;
         width: 40vw;
     }
     position: relative;
-    overflow: hidden;
 }
 
 
